# OpenSMTPD

./: .gitattributes  .gitignore  .travis.yml  CHANGES.md  ChangeLog  ChangeLog-asr  ChangeLog-mail.local  ChangeLog-smtpd  Dockerfile  LICENSE  Makefile  Makefile.am  README  README.md  SECURITY.md  THANKS  aldap.c  aldap.h  aliases.5  aliases.c  asr.c  asr.h  atomic.c  auth_backend.c  auth_bsd.c  auth_pwd.c  authenticate.c  bootstrap  bounce.c  buffer.c  client.c  client.h  compress_backend.c  compress_gzip.c  compress_zlib.c  config.c  configure  configure.ac  control.c  crypto_backend.c  (+89 more)
contrib/libexec/encrypt/: Makefile.am  encrypt.c
contrib/libexec/lockspool/: Makefile.am  locking.c  lockspool.c
contrib/libexec/mail.local/: Makefile.am  locking.c  mail.local.c  pathnames.h
foobar/portable/openbsd-compat/: Makefile.am  SSL_CTX_use_certificate_chain_mem.c  bsd-misc.h  imsg-buffer.c  imsg.c  imsg.h  libressl.c  res_randomid.c  setegid.c  setresgid.c  signal.c  strerror.c  strlcat.c
mk/backends/: Makefile.am  table.mk
mk/backends/queue-null/: Makefile.am
mk/backends/queue-ram/: Makefile.am
mk/backends/queue-stub/: Makefile.am
mk/backends/scheduler-ram/: Makefile.am
mk/backends/scheduler-stub/: Makefile.am
mk/backends/table-ldap/: Makefile.am
mk/backends/table-mysql/: Makefile.am
mk/backends/table-passwd/: Makefile.am
mk/backends/table-postgres/: Makefile.am
mk/backends/table-redis/: Makefile.am
mk/backends/table-socketmap/: Makefile.am
mk/backends/table-sqlite/: Makefile.am
mk/backends/table-stub/: Makefile.am
mk/filters/: Makefile.am
mk/filters/dnsbl/: Makefile.am
mk/filters/lua/: Makefile.am
mk/filters/monkey/: Makefile.am
mk/filters/stub/: Makefile.am
mk/filters/trace/: Makefile.am
mk/filters/void/: Makefile.am
mk/mail/mail.lmtp/: Makefile.am
mk/mail/mail.maildir/: Makefile.am
mk/mail/mail.mboxfile/: Makefile.am
mk/mail/mail.mda/: Makefile.am
mk/makemap/: Makefile  Makefile.am  makemap
mk/regress/: Makefile.am
mk/smtp/: Makefile.am
mk/smtpctl/: Makefile  Makefile.am  smtpctl
mk/smtpd/: Makefile  Makefile.am  smtpd
openbsd-compat/: Makefile.am  NOTES  SSL_CTX_use_certificate_chain_mem.c  arc4random.c  asr.h  base64.c  base64.h  basename.c  bcrypt.c  blf.h  blowfish.c  bsd-arc4random.c  bsd-chacha.c  bsd-closefrom.c  bsd-err.c  bsd-err.h  bsd-getpeereid.c  bsd-misc.c  bsd-misc.h  bsd-waitpid.c  chacha.c  chacha_private.h  clock_gettime.c  closefrom.c  crypt_checkpass.c  cryptutil.c  daemon.c  defines.h  dirname.c  entropy.c  entropy.h  err.h  errc.c  event_asr_run.c  explicit_bzero.c  fgetln.c  flock.c  fmt_scaled.c  fparseln.c  freezero.c  (+42 more)
openbsd-compat/err_h/: err.h
openbsd-compat/libasr/: Makefile.am  asr.c  asr_compat.h  asr_debug.c  asr_private.h  asr_utils.c  getaddrinfo_async.c  gethostnamadr_async.c  getnameinfo.c  getnameinfo_async.c  getrrsetbyname_async.c  libasr.la  res_mkquery.c  res_search_async.c  res_send_async.c  thread_private.h
openbsd-compat/libtls/: a_time_posix.c  asn.c  by_mem.c  openssl.c  tls.c  tls.h  tls_bio_cb.c  tls_client.c  tls_config.c  tls_conninfo.c  tls_internal.h  tls_keypair.c  tls_ocsp.c  tls_peer.c  tls_server.c  tls_signer.c  tls_util.c  tls_verify.c
smtpd/: Makefile  Makefile.am  aldap.c  aldap.h  aliases.5  aliases.c  auth.c  auth_bsd.c  auth_pwd.c  ber.c  ber.h  boguskeys.h  bounce.c  ca.c  cert.c  compress_backend.c  compress_gzip.c  config.c  control.c  crypto.c  csprng.c  delivery.c  delivery_filename.c  delivery_lmtp.c  delivery_maildir.c  delivery_mbox.c  delivery_mda.c  dict.c  dns.c  enhancedstatus.c  enqueue.c  envelope.c  envelope_v1.c  envelope_v2.c  errc.c  esc.c  event_asr_run.c  expand.c  filter.c  filter_api.c  (+130 more)
smtpd/CVS/: Entries  Repository  Root
smtpd/asr/: asr.c  asr.h  asr_private.h  getaddrinfo_async.c  gethostnamadr_async.c  getnetnamadr_async.c  res_init.c  thread_private.h
smtpd/backends/: Makefile  Makefile.am  Makefile.inc  queue_null.c  queue_python.c  queue_ram.c  queue_stub.c  queue_utils.c  queue_utils.h  scheduler_python.c  scheduler_ram.c  scheduler_stub.c  table_ldap.c  table_mysql.c  table_passwd.c  table_postgres.c  table_sqlite.c  table_stub.c
smtpd/backends/backend-queue-null/: Makefile
smtpd/backends/backend-queue-ram/: Makefile
smtpd/backends/backend-queue-stub/: Makefile
smtpd/backends/backend-scheduler-ram/: Makefile
smtpd/backends/backend-scheduler-stub/: Makefile
smtpd/backends/backend-table-ldap/: Makefile
smtpd/backends/backend-table-mysql/: Makefile
smtpd/backends/backend-table-passwd/: Makefile
smtpd/backends/backend-table-postgres/: Makefile
smtpd/backends/backend-table-sqlite/: Makefile
smtpd/backends/backend-table-stub/: Makefile
smtpd/backends/queue-null/: Makefile
smtpd/backends/queue-python/: Makefile
smtpd/backends/queue-ram/: Makefile
smtpd/backends/queue-stub/: Makefile
smtpd/filters/: Makefile  Makefile.am  Makefile.inc  asr_event.c  asr_event.h  filter-monkey.c  filter-trace.c  filter_dnsbl.c  filter_lua.c  filter_lua.lua  filter_monkey.c  filter_perl.c  filter_python.c  filter_python.py  filter_python2.7.c  filter_stub.c  filter_trace.c  filter_void.c
smtpd/libsmtpdfilter/: Makefile
smtpd/mail/: Makefile
smtpd/makemap/: Makefile
smtpd/smtp/: Makefile
smtpd/smtpctl/: Makefile
smtpd/smtpctl/CVS/: Root  (+2 more)
smtpd/smtpd/: Makefile
smtpd/table-ldap/: Makefile
smtpd/table-mysql/: Makefile
smtpd/table-postgres/: Makefile
smtpd/table-redis/: Makefile
smtpd/table-socketmap/: Makefile
smtpd/table-sqlite/: Makefile
smtpd/table-stub/: Makefile
src/: Makefile.am  aliases.c  asr.c  auth.c  auth_backend.c  auth_bsd.c  authenticate.c  bounce.c  buffer.c  client.c  compress_backend.c  compress_gzip.c  compress_zlib.c  config.c  control.c  delivery.c  delivery_filename.c  delivery_maildir.c  delivery_mbox.c  delivery_mda.c  dname.c  dns.c  dnsdefs.h  encrypt.c  enqueue.c  envelope.c  expand.c  filter_api.c  forward.c  imsg.c  imsg.h  iobuf.c  ioev.c  lka.c  lka_session.c  log.c  log.h  makemap.8  makemap.c  map.c  (+52 more)
src/CVS/: Entries  Root
src/libexec/: Makefile.am
(+288 files in other folders)
